# crypto-trader

./: .gitignore  CMakeLists.txt  INSTRUCTIONS.md  README.md  build.bat  risk_limits.json
include/: config.h
src/: audit.cpp  audit.h  cli.cpp  cli.h  exchange_client.cpp  exchange_client.h  llm_agent.cpp  llm_agent.h  main.cpp  utils.h  validator.cpp  validator.h
